EditCv encours faire changer le style du bouton selectionne

--- a/src/pages/EditCv/editCv.css
+++ b/src/pages/EditCv/editCv.css
@@ -34,3 +34,8 @@
     background-color: var(--myGray);
     box-shadow: 10px 10px 10px lightgray;
 }
+
+#collectionList button.selected {
+    color: red;
+    background-color: var(--myGray);
+}
