--- a/src/pages/EditCv/editCv.css
+++ b/src/pages/EditCv/editCv.css
@@ -32,8 +32,8 @@
     width: 60vw;
     border-radius: 16px;
     padding: 16px;
-    background-color: var(--myGray);
-    box-shadow: 10px 10px 10px lightgray;
+    background-color: var(--myIvoiry);
+    box-shadow: 0px 10px 10px lightgray;
 }
 
 #collectionList button.selected {
