--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--myWhite);
 }
 
 #root {
