--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,13 +1,20 @@
 header {
     width: 100%;
     height: 80px;
-    background-color: var(--myOrange);
+    background-color: var(--myWhite);
     position: absolute;
     top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 72px;
+    color: var(--myOrange);
+    border-bottom: 10px solid var(--myOrange);
+}
+
+header h1 {
+    font-size: 2em;
+    font-weight: bold;
 }
 
 header button {
@@ -15,5 +22,8 @@ header button {
     width: 120px;
     background-color: var(--myWhite);
     border-radius: 10px;
-    color: black;
+    color: var(--myOrange);
+}
+.btn{
+    box-shadow: -5px 5px 5px lightgray;
 }
