--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 :root {
-    --myOrange: #CB6042;
+    /* --myOrange: #CB6042; */
     /* --myOrange: hsl(19, 56%, 40%); */
-    /* --myOrange: #B7410E; */
+    --myOrange: #B7410E;
     /* --myOrange: #E9967A; */
     --myWhite: #F5F5F5;
     --myGray: #D9D9D9;
     --myYellow: #EEC584;
     --myIvoiry: #FAEBD7;
+    --cvBorderRadius: 10px;
 }
 
 * {
