--- a/src/pages/Cv/EditCv/Formulaires/Langues/langues.css
+++ b/src/pages/Cv/EditCv/Formulaires/Langues/langues.css
@@ -1,4 +1,4 @@
-#interetsContainer {
+#langContainer {
   height: 100%;
   width: 100%;
   display: flex;
@@ -7,7 +7,7 @@
   gap: 3%;
 }
 
-#interetsForm {
+#langForm {
   height: 90%;
   width: 47%;
   padding: 16px;
@@ -16,11 +16,11 @@
   gap: 16px;
 }
 
-#interetsForm button{
+#langForm button {
   box-shadow: 0px 1px 2px lightgray;
 }
 
-#interetsList {
+#langList {
   height: 90%;
   width: 47%;
   padding: 16px;
@@ -28,3 +28,4 @@
   background-color: white;
   color: black;
 }
+
