--- a/src/pages/Cv/EditCv/Formulaires/Interets/interets.scss
+++ b/src/pages/Cv/EditCv/Formulaires/Interets/interets.scss
@@ -1,4 +1,6 @@
-#langContainer {
+@use "../../../../../variables";
+
+#interetsContainer {
   height: 100%;
   width: 100%;
   display: flex;
@@ -7,20 +9,20 @@
   gap: 3%;
 }
 
-#langForm {
+#interetsForm {
   height: 90%;
   width: 47%;
   padding: 16px;
   display: flex;
   flex-direction: column;
   gap: 16px;
+
+  button {
+    box-shadow: 0px 1px 2px variables.$myLightGray;
+  }
 }
 
-#langForm button {
-  box-shadow: 0px 1px 2px lightgray;
-}
-
-#langList {
+#interetsList {
   height: 90%;
   width: 47%;
   padding: 16px;
@@ -28,4 +30,3 @@
   background-color: white;
   color: black;
 }
-
