--- a/src/pages/Cv/EditCv/Formulaires/Langues/langues.scss
+++ b/src/pages/Cv/EditCv/Formulaires/Langues/langues.scss
@@ -1,4 +1,6 @@
-#interetsContainer {
+@use "../../../../../variables";
+
+#langContainer {
   height: 100%;
   width: 100%;
   display: flex;
@@ -7,20 +9,20 @@
   gap: 3%;
 }
 
-#interetsForm {
+#langForm {
   height: 90%;
   width: 47%;
   padding: 16px;
   display: flex;
   flex-direction: column;
   gap: 16px;
+
+  button {
+    box-shadow: 0px 1px 2px variables.$myLightGray;
+  }
 }
 
-#interetsForm button{
-  box-shadow: 0px 1px 2px lightgray;
-}
-
-#interetsList {
+#langList {
   height: 90%;
   width: 47%;
   padding: 16px;
