--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -1,5 +1,7 @@
+@use "../../variables";
+
 #container {
-  background-color: lightgray;
+  background-color: variables.$lightgray;
   border-radius: 30px;
   height: 400px;
   width: 400px;
@@ -8,10 +10,10 @@
   justify-content: center;
   align-items: center;
   gap: 2rem;
-}
 
-#container form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
