refactoring et readaptation pour projet plus complet avec portfolio

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,10 +1,10 @@
-/* --myOrange: #CB6042; */
+/* $myOrange: #CB6042; */
 /* --myOrange: hsl(19, 56%, 40%); */
 $myOrange: #b7410e;
 /* --myOrange: #E9967A; */
 $myWhite: #f5f5f5;
 $myGray: #d9d9d9;
-$myLightGray: #EEEEEE;
+$myLightGray: #CCCCCC;
 $myYellow: #eec584;
 $myIvoiry: #faebd7;
 $cvBorderRadius: 10px;
