--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -1,19 +1,19 @@
 @use "../../variables";
 
-#container {
-  background-color: variables.$lightgray;
-  border-radius: 30px;
-  height: 400px;
-  width: 400px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
+// #container {
+//   background-color: variables.$lightgray;
+//   border-radius: 30px;
+//   height: 400px;
+//   width: 400px;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   gap: 2rem;
 
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-}
+//   form {
+//     display: flex;
+//     flex-direction: column;
+//     gap: 1rem;
+//   }
+// }
