--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,10 +1,12 @@
 /* $myOrange: #CB6042; */
 /* --myOrange: hsl(19, 56%, 40%); */
-$myOrange: #b7410e;
 /* --myOrange: #E9967A; */
+$myOrange: #b7410e;
 $myWhite: #f5f5f5;
 $myGray: #d9d9d9;
 $myLightGray: #CCCCCC;
 $myYellow: #eec584;
 $myIvoiry: #faebd7;
-$cvBorderRadius: 10px;
+// variables qui concernent la partie cv
+$headerHeight: 80px;
+
