--- a/src/pages/Cv/EditCv/Formulaires/Certications/certifications.scss
+++ b/src/pages/Cv/EditCv/Formulaires/Certications/certifications.scss
@@ -25,6 +25,12 @@
   flex-direction: column;
   gap: 16px;
 
+  .row_img{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
   button {
     box-shadow: 0px 1px 2px variables.$myLightGray;
   }
@@ -37,10 +43,16 @@
   .img_container{
     width: 100px;
     height: 100px;
-    border: solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     img {
         width: 100%;
+    }
+
+    .btn_upload{
+        color: red;
     }
   }
 }
