modif de couleur btn_update

--- a/src/pages/Cv/EditCv/Formulaires/Projets/projets.scss
+++ b/src/pages/Cv/EditCv/Formulaires/Projets/projets.scss
@@ -121,6 +121,11 @@
         background-color: variables.$myOrange;
         color: variables.$myWhite;
       }
+
+      #btn_update{
+        background-color: variables.$myBlue;
+        color: variables.$myWhite;
+      }
     }
   }
 }
