--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,6 +7,7 @@ $myGray: #d9d9d9;
 $myLightGray: #CCCCCC;
 $myYellow: #eec584;
 $myIvoiry: #faebd7;
+$myBlue: #55868C;
 // variables qui concernent la partie cv
 $headerHeight: 80px;
 
