--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,46 +1,11 @@
 @use "../../variables";
-$animationMenuTimer: 0.2s;
 
-header.adminStyle {
-  width: 100%;
-  height: variables.$headerHeight;
-  background-color: variables.$myWhite;
-  position: absolute;
-  top: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 72px;
-  color: variables.$myOrange;
-  border-bottom: 10px solid variables.$myOrange;
-  padding: 0px 32px;
+// Détermine le temps de l'animation du Menu Burger
+$animationMenuTimer: 0.3s;
 
-  h1 {
-    font-size: 2em;
-    font-weight: bold;
-  }
 
-  button {
-    height: 60%;
-    width: 120px;
-    background-color: variables.$myWhite;
-    border-radius: 10px;
-    color: variables.$myOrange;
-  }
 
-  ul {
-    display: flex;
-    gap: 16px;
-    .icone {
-      color: variables.$myOrange;
-    }
-  }
-
-  .btn {
-    box-shadow: -5px 5px 5px variables.$myLightGray;
-  }
-}
-
+// Style du header en mode User
 header {
   width: 100%;
   height: variables.$headerHeight;
@@ -63,15 +28,14 @@ header {
       font-size: 1.8rem;
     }
 
-     @media (max-width: 400px) {
+    @media (max-width: 400px) {
       font-size: 1.5rem;
     }
-   
   }
 
   #burger-menu {
     width: variables.$headerHeight;
-    height: variables.$headerHeight;
+    height: calc(variables.$headerHeight - 10px);
     display: none;
     justify-content: center;
     align-items: center;
@@ -81,7 +45,7 @@ header {
     }
 
     .burger-icon {
-      height: 30px;
+      height: 29px;
       width: 45px;
       display: flex;
       flex-direction: column;
@@ -95,6 +59,7 @@ header {
       }
 
       &.open .burger-line:nth-child(1) {
+        transform-origin: center;
         animation: firstLineAnimation $animationMenuTimer ease-in-out forwards;
 
         @keyframes firstLineAnimation {
@@ -102,23 +67,24 @@ header {
             transform: translateY(0px) rotate(0deg) scale(1);
           }
           25% {
-            transform: translateY(17px) rotate(0deg) scale(1);
+            transform: translateY(12px) rotate(0deg) scale(1);
           }
           50% {
-            transform: translateY(17px) rotate(0deg) scale(0);
+            transform: translateY(12px) rotate(0deg) scale(0);
           }
           75% {
-            transform: translateY(17px) rotate(45deg) scale(0);
+            transform: translateY(12px) rotate(45deg) scale(0);
           }
           100% {
-            transform: translateY(17px) rotate(45deg) scale(1);
+            transform: translateY(12px) rotate(45deg) scale(1);
           }
         }
       }
 
       &.open .burger-line:nth-child(2) {
+        transform-origin: center;
         animation: secondeLineAnimation $animationMenuTimer ease-in-out forwards;
-
+        
         @keyframes secondeLineAnimation {
           0% {
             transform: translateY(0px) rotate(0deg) scale(1);
@@ -131,34 +97,38 @@ header {
       }
 
       &.open .burger-line:nth-child(3) {
+        transform-origin: center;
         animation: thirdLineAnimation $animationMenuTimer ease-in-out forwards;
+       
         @keyframes thirdLineAnimation {
           0% {
             transform: translateY(0px) rotate(0deg) scale(1);
           }
           25% {
-            transform: translateY(-17px) rotate(0deg) scale(1);
+            transform: translateY(-12px) rotate(0deg) scale(1);
           }
           50% {
-            transform: translateY(-17px) rotate(0deg) scale(0);
+            transform: translateY(-12px) rotate(0deg) scale(0);
           }
           75% {
-            transform: translateY(-17px) rotate(-45deg) scale(0);
+            transform: translateY(-12px) rotate(-45deg) scale(0);
           }
           100% {
-            transform: translateY(-17px) rotate(-45deg) scale(1);
+            transform: translateY(-12px) rotate(-45deg) scale(1);
           }
         }
       }
 
       &.close .burger-line:nth-child(1) {
+        transform-origin: center;
         animation: firstLineAnimationClose $animationMenuTimer ease-in-out forwards;
+        
         @keyframes firstLineAnimationClose {
           0% {
-            transform: translateY(17px) rotate(0deg) scale(0);
+            transform: translateY(12px) rotate(0deg) scale(0);
           }
           50% {
-            transform: translateY(17px) rotate(0deg) scale(1);
+            transform: translateY(12px) rotate(0deg) scale(1);
           }
           100% {
             transform: translateY(0px) rotate(0deg) scale(1);
@@ -167,7 +137,9 @@ header {
       }
 
       &.close .burger-line:nth-child(2) {
+        transform-origin: center;
         animation: secondLineAnimationClose $animationMenuTimer ease-in-out forwards;
+        
         @keyframes secondLineAnimationClose {
           0% {
             transform: translateY(0px) rotate(0deg) scale(0);
@@ -182,13 +154,15 @@ header {
       }
 
       &.close .burger-line:nth-child(3) {
+        transform-origin: center;
         animation: thirdLineAnimationClose $animationMenuTimer ease-in-out forwards;
+       
         @keyframes thirdLineAnimationClose {
           0% {
-            transform: translateY(-17px) rotate(0deg) scale(0);
+            transform: translateY(-12px) rotate(0deg) scale(0);
           }
           50% {
-            transform: translateY(-17px) rotate(0deg) scale(1);
+            transform: translateY(-12px) rotate(0deg) scale(1);
           }
           100% {
             transform: translateY(0px) rotate(0deg) scale(1);
@@ -210,21 +184,20 @@ header {
       li {
         .icone {
           color: variables.$myWhite;
-          
-          @media(max-width: 768px){
+
+          @media (max-width: 768px) {
             width: 50px;
           }
         }
 
-          p {
-            display: none;
-            color: variables.$myWhite;
+        p {
+          display: none;
+          color: variables.$myWhite;
 
-            @media(max-width: 768px){
-              display: flex;
-            }
+          @media (max-width: 768px) {
+            display: flex;
           }
-        
+        }
 
         @media (max-width: 768px) {
           display: flex;
@@ -257,8 +230,45 @@ header {
       font-size: 1.5rem;
     }
   }
+}
 
-  .btn {
-    box-shadow: -5px 5px 5px variables.$myLightGray;
+// Style appliqué au header en mode Admin
+header.adminStyle {
+  width: 100%;
+  height: variables.$headerHeight;
+  background-color: variables.$myWhite;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 72px;
+  color: variables.$myOrange;
+  border-bottom: 10px solid variables.$myOrange;
+  padding: 0px 32px;
+
+  h1 {
+    font-size: 2em;
+    font-weight: bold;
+  }
+
+  #burger-menu .burger-icon .burger-line {
+    background-color: variables.$myOrange;
+  }
+
+  button {
+    height: 60%;
+    width: 120px;
+    background-color: variables.$myWhite;
+    border-radius: 10px;
+    color: variables.$myOrange;
+  }
+
+  ul {
+    display: flex;
+    gap: 16px;
+    .icone {
+      color: variables.$myOrange;
+    }
   }
 }
