--- a/src/Header/header.scss
+++ b/src/Header/header.scss
@@ -1,4 +1,4 @@
-@use "../../variables";
+@use "../variables";
 
 // Détermine le temps de l'animation du Menu Burger
 $animationMenuTimer: 0.3s;
@@ -19,6 +19,10 @@ header {
   color: variables.$myWhite;
   border-bottom: 10px solid variables.$myOrange;
   padding: 0px 40px;
+
+  @media (max-width: 768px){
+    padding: 0px 0px 0px 16px;
+  }
 
   h1 {
     font-size: 2em;
@@ -205,7 +209,7 @@ header {
           gap: 24px;
           width: 100%;
           justify-content: flex-start;
-          padding-left: 24px;
+          padding-left: 16px;
         }
       }
 
