--- a/src/pages/projetPortfolio.scss
+++ b/src/pages/projetPortfolio.scss
@@ -1,1 +1,10 @@
 @use "../variables";
+
+#container-Princal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
