--- a/src/pages/EditCv/Formulaires/Interets/interets.scss
+++ b/src/pages/EditCv/Formulaires/Interets/interets.scss
@@ -1,6 +1,6 @@
-@use "../../../../../variables";
+@use "../../../../variables";
 
-#langContainer {
+#interetsContainer {
   height: 100%;
   width: 100%;
   display: flex;
@@ -9,7 +9,7 @@
   gap: 3%;
 }
 
-#langForm {
+#interetsForm {
   height: 90%;
   width: 47%;
   padding: 16px;
@@ -22,7 +22,7 @@
   }
 }
 
-#langList {
+#interetsList {
   height: 90%;
   width: 47%;
   padding: 16px;
