--- a/src/pages/EditCv/Formulaires/Langues/langues.scss
+++ b/src/pages/EditCv/Formulaires/Langues/langues.scss
@@ -1,6 +1,6 @@
-@use "../../../../../variables";
+@use "../../../../variables";
 
-#interetsContainer {
+#langContainer {
   height: 100%;
   width: 100%;
   display: flex;
@@ -9,7 +9,7 @@
   gap: 3%;
 }
 
-#interetsForm {
+#langForm {
   height: 90%;
   width: 47%;
   padding: 16px;
@@ -22,7 +22,7 @@
   }
 }
 
-#interetsList {
+#langList {
   height: 90%;
   width: 47%;
   padding: 16px;
