résolutions de bug et refactoring Login

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,6 +8,7 @@ $myLightGray: #CCCCCC;
 $myYellow: #eec584;
 $myIvoiry: #faebd7;
 $myBlue: #55868C;
+$myBlack: #231C07;
 // variables qui concernent la partie cv
 $headerHeight: 80px;
 $smallDevice: 430px;
