--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -1,19 +1,24 @@
 @use "../../variables";
 
-// #container {
-//   background-color: variables.$lightgray;
-//   border-radius: 30px;
-//   height: 400px;
-//   width: 400px;
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   gap: 2rem;
+#container-login{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    width: 100%;
+    padding: 40px;
+    border-radius: 16px;
+    background-color: rgba(variables.$myOrange, 0.85);
+}
 
-//   form {
-//     display: flex;
-//     flex-direction: column;
-//     gap: 1rem;
-//   }
-// }
+.input{
+ 
+}
+
+.btn{
+    background-color: variables.$myWhite;
+    color: variables.$myBlack;
+    padding: 0 16px;
+    margin-top: 24px;
+}
