--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,3 @@
-/* $myOrange: #CB6042; */
-/* --myOrange: hsl(19, 56%, 40%); */
-/* --myOrange: #E9967A; */
 $myOrange: #b7410e;
 $myWhite: #f5f5f5;
 $myGray: #d9d9d9;
@@ -9,7 +6,6 @@ $myYellow: #eec584;
 $myIvoiry: #faebd7;
 $myBlue: #55868C;
 $myBlack: #231C07;
-// variables qui concernent la partie cv
 $headerHeight: 80px;
-$smallDevice: 430px;
-
+$smallDevice: 752px;
+$maxWidth: 1200px
