--- a/src/pages/Portfolio/hero/hero.scss
+++ b/src/pages/Portfolio/hero/hero.scss
@@ -3,38 +3,55 @@ $variableAnimation: 60%;
 
 #hero {
   display: flex;
+  align-items: center;
+  justify-content: center;
   background: linear-gradient(
     to bottom,
     variables.$myOrange 0%,
     variables.$myOrange variables.$headerHeight,
     variables.$myWhite $variableAnimation
   );
+  gap: 32px;
+  height: 100vh;
+  width: 100vw;
+  max-width: variables.$maxWidth;
   
   @media (max-width: variables.$smallDevice) {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 24px;
-    height: 100vh;
-    width: 100vw;
   }
 
-  img {
-    width: 75%;
+  .containerImage{
+    width: 45%;
+
+    @media(max-width: variables.$smallDevice){
+      width: 75%;
+    }
+    img {
+      width: 100%;
+    }
   }
+
 
   #accroche {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 45%;
+    gap: 16px;
 
-    @media(max-width: variables.$smallDevice) {
-        flex-direction: column;
+    @media(max-width: variables.$smallDevice){
+      width: 100%;
+      gap: 0;
     }
 
     h1 {
-      width: 100%;
+      font-size: 2.3rem;
 
       @media (max-width: variables.$smallDevice) {
-        font-size: 2rem;
+        font-size: 1.9rem;
       }
     }
 
