--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,4 +1,5 @@
 $myOrange: #b7410e;
+$myGreen: #CACAAA;
 $myWhite: #f5f5f5;
 $myGray: #d9d9d9;
 $myLightGray: #CCCCCC;
@@ -8,4 +9,4 @@ $myBlue: #55868C;
 $myBlack: #231C07;
 $headerHeight: 80px;
 $smallDevice: 752px;
-$maxWidth: 1200px
+$maxWidth: 1440px
