--- a/src/Header/header.scss
+++ b/src/Header/header.scss
@@ -13,6 +13,7 @@ header {
   background-color: variables.$myOrange;
   position: absolute;
   top: 0;
+  left: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -179,6 +180,7 @@ header {
 
   nav {
     display: flex;
+    z-index: 2;
 
     ul {
       display: flex;
