--- a/src/pages/Edition/Formulaires/Technos/techno.scss
+++ b/src/pages/Edition/Formulaires/Technos/techno.scss
@@ -29,12 +29,12 @@
     box-shadow: 0px 1px 2px variables.$myLightGray;
   }
 
-  #logo_row {
+  #image_row {
     display: flex;
     align-items: center;
     justify-content: space-around;
 
-    #logo_container {
+    #image_container {
       width: 100px;
       height: 100px;
       display: flex;
