--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -1,16 +1,31 @@
 @use "../../variables";
 
-#container-login{
+#container_login{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 16px;
     width: 100%;
+   height: calc(100vh - variables.$headerHeight);
     padding: 40px;
-    border-radius: 16px;
-    background-color: rgba(variables.$myOrange, 0.85);
+    
+    form{
+        gap: 16px;
+        height: 350px;
+        border-radius: 16px;
+        background-color: rgba(variables.$myOrange, 0.85);
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        input {
+            width: 75%;
+        }
+    }
 }
+
 
 .input{
  
