--- a/src/pages/Register/register.scss
+++ b/src/pages/Register/register.scss
@@ -1,19 +1,32 @@
 @use "../../variables";
 
-#container {
-  background-color: variables.$myLightGray;
-  border-radius: 30px;
-  height: 400px;
-  width: 400px;
+#container_register {
+  height: calc(100vh - variables.$headerHeight);
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
-
+  gap: 1rem;
+  background-color: variables.$myOrange;
+  
   form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    background-color: variables.$myWhite;
+    border-radius: 30px;
+    height: 350px;
+    width: 300px;
+
+    input {
+      width: 75%;
+    }
+  }
+
+  .login_return{
+    color: variables.$myWhite;
   }
 }
