--- a/src/pages/Contact/contact.scss
+++ b/src/pages/Contact/contact.scss
@@ -4,25 +4,36 @@
     color: black;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 16px;
-    width: 500px;
+    height: calc(100vh - variables.$headerHeight);
+  
+    form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 90vw;
+        max-width: 500px;
+        gap: 16px;
 
-    h1{
-        font-size: 2rem;
-    }
+        h1{
+            font-size: 2rem;
+        }
+        
+        input {
+            background-color: white;
+            width: 100%;
+        }
     
-    input {
-        background-color: white;
-        width: 100%;
-    }
-
-    textarea {
-        background-color: white;
-        width: 500px;
-    }
-
-    button {
-        width: 30%;
+        textarea {
+            background-color: white;
+            width: 100%;
+        }
+    
+        button {
+            width: 30%;
+        }
     }
 }
