--- a/src/pages/Edition/Formulaires/Projets/projets.scss
+++ b/src/pages/Edition/Formulaires/Projets/projets.scss
@@ -98,6 +98,7 @@
     
             select{
                 width: 100%;
+                padding-left: 16px;
                 background-color: white;
             }
         }
