--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,5 +8,11 @@ $myIvoiry: #faebd7;
 $myBlue: #55868C;
 $myBlack: #231C07;
 $headerHeight: 80px;
-$smallDevice: 752px;
-$maxWidth: 1440px
+$mobileDevice: 479px;
+$smallDevice: 768px;
+$maxWidth: 1440px;
+$padding_bottom_Section: 64px; 
+$padding_top_Section: 32px;
+
+$gap_vignette_mobile: 56px;
+$h2_size_mobile: 2.5rem;
