--- a/src/pages/Portfolio/projetsFavoris/components/vignetteProjet/vignetteProjet.scss
+++ b/src/pages/Portfolio/projetsFavoris/components/vignetteProjet/vignetteProjet.scss
@@ -1,39 +1,79 @@
 @use "../../../../../variables.scss";
 
-.vignette{
+.vignette {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+
+  @media (max-width: variables.$mobileDevice) {
+    flex-direction: column;
+  }
+
+  div {
+    @media (max-width: variables.$mobileDevice) {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
+
+  h3 {
+    text-align: start;
+  }
+  p {
+    display: block;
+
+    @media (max-width: variables.$smallDevice) {
+      display: none;
+    }
+  }
+
+  .listeTechno {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
+    flex-wrap: wrap;
 
-    > div {
-        width: 90%;
-        
+    img {
+      width: 50px;
     }
 
-    h3{
-        font-weight: bold;
-        font-size: 1.2rem;
+    @media (max-width: variables.$mobileDevice) {
+      display: none;
     }
+  }
 
-    .listeTechno{
-        display: flex;
+  .listeTechno_mobile_view {
+    display: none;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 8px;
+    padding-top: 16px;
+
+    div {
+      width: 35px;
     }
-
-    a{
-        border: solid 0.1px variables.$myLightGray;
-        width: 25%;
-        border-radius: 15px;
-        box-shadow: 10px 10px 10px variables.$myLightGray;
-        padding: 4px;
-        aspect-ratio: 1/1;
-        overflow: hidden;
-
-        img{
-            display: block;;
-            width: 100%;
-            object-fit: contain;
-            border-radius: 12px;
-        }
+    @media (max-width: variables.$mobileDevice) {
+      display: flex;
     }
+  }
+
+  a {
+    border: solid 0.1px variables.$myLightGray;
+    width: 100%;
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px variables.$myLightGray;
+    padding: 4px;
+    aspect-ratio: 1/1;
+    overflow: hidden;
+    opacity: 0.7;
+
+    img {
+      display: block;
+      width: 100%;
+      object-fit: contain;
+      border-radius: 12px;
+    }
+  }
 }
