--- a/src/pages/Portfolio/projetsFavoris/projetsFavoris.scss
+++ b/src/pages/Portfolio/projetsFavoris/projetsFavoris.scss
@@ -1,17 +1,19 @@
 @use "../../../variables";
 
-h2{
-    color: variables.$myOrange;
-    font-size: 2.5rem;
-}
-
-#projetsFavoris {
+#liste_projetsFavoris {
   background-color: variables.$myWhite;
   width: 100%;
-  height:100vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  gap: 32px;
+  gap: variables.$gap_vignette_mobile;
+  padding-bottom: 300px;
+  padding-bottom: variables.$padding_bottom_Section;
+  
+  .plusDeProjets{
+    text-decoration: underline;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
 }
