--- a/src/pages/Body/Portfolio/Hero/hero.scss
+++ b/src/pages/Body/Portfolio/Hero/hero.scss
@@ -15,7 +15,7 @@ $variableAnimation: 60%;
   height: 100vh;
   width: 100vw;
   max-width: variables.$maxWidth;
-  
+
   @media (max-width: variables.$smallDevice) {
     flex-direction: column;
     justify-content: center;
@@ -23,17 +23,16 @@ $variableAnimation: 60%;
     gap: 24px;
   }
 
-  .containerImage{
+  .containerImage {
     width: 45%;
 
-    @media(max-width: variables.$smallDevice){
+    @media (max-width: variables.$smallDevice) {
       width: 75%;
     }
     img {
       width: 100%;
     }
   }
-
 
   #accroche {
     display: flex;
@@ -42,7 +41,7 @@ $variableAnimation: 60%;
     width: 45%;
     gap: 16px;
 
-    @media(max-width: variables.$smallDevice){
+    @media (max-width: variables.$smallDevice) {
       width: 100%;
       gap: 0;
     }
@@ -68,12 +67,12 @@ $variableAnimation: 60%;
       align-items: center;
       color: variables.$myOrange;
       gap: 8px;
-
+      padding-bottom: 32px;
       @media (max-width: variables.$smallDevice) {
         font-size: 0.9rem;
       }
 
-      .animation{
+      .animation {
         height: 16px;
         width: 16px;
         background-color: variables.$myOrange;
@@ -83,22 +82,14 @@ $variableAnimation: 60%;
 
       @keyframes alert {
         0% {
-            transform: scale(0);
-            opacity: 1;
+          transform: scale(0);
+          opacity: 1;
         }
         100% {
-            transform: scale(1);
-            opacity: 0;
+          transform: scale(1);
+          opacity: 0;
         }
       }
-    }
-
-    .reseaux-sociaux {
-      width: 100%;
-      padding-top: 40px;
-      display: flex;
-      gap: 16px;
-      justify-content: center;
     }
   }
 }
