--- a/src/pages/Footer/footer.scss
+++ b/src/pages/Footer/footer.scss
@@ -1,2 +1,12 @@
-@use "../../variables"
+@use "../../variables";
 
+footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    background-color: variables.$myBlack;
+    color: variables.$myWhite;
+    height: 150px;
+}
