--- a/src/pages/components/Reseaux/reseaux.scss
+++ b/src/pages/components/Reseaux/reseaux.scss
@@ -1,1 +1,8 @@
-@use "../../../variables"
+@use "../../../variables";
+
+.reseaux-sociaux {
+      width: 100%;
+      display: flex;
+      gap: 16px;
+      justify-content: center;
+    }
