Réglages du comportement de Header, Contact

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,6 +7,7 @@ $myYellow: #eec584;
 $myIvoiry: #faebd7;
 $myBlue: #55868C;
 $myBlack: #231C07;
+
 $headerHeight: 80px;
 $mobileDevice: 479px;
 $smallDevice: 768px;
@@ -17,3 +18,5 @@ $padding_top_Section: 32px;
 
 $gap_vignette_mobile: 56px;
 $h2_size_mobile: 2.5rem;
+
+$footerHeight: 150px;
