--- a/src/pages/Body/Contact/contact.scss
+++ b/src/pages/Body/Contact/contact.scss
@@ -7,7 +7,8 @@
     justify-content: center;
     align-items: center;
     gap: 16px;
-    width: 100%;
+    width: 100vw;
+    height: calc(100vh - variables.$footerHeight);
     padding-top: variables.$padding_top_Section;
     padding-bottom: variables.$padding_bottom_Section;
   
@@ -16,6 +17,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        max-width: 500px;
         width: 90%;
         gap: 16px;
 
@@ -31,6 +33,11 @@
         textarea {
             background-color: white;
             width: 100%;
+        }
+        button{
+            background-color: rgba(variables.$myOrange, 0.8);
+            color: variables.$myWhite;
+            margin-top: 16px
         }
     
     }
