--- a/src/pages/Body/Portfolio/Hero/hero.scss
+++ b/src/pages/Body/Portfolio/Hero/hero.scss
@@ -16,19 +16,27 @@ $variableAnimation: 60%;
   width: 100vw;
   max-width: variables.$maxWidth;
 
-  @media (max-width: variables.$smallDevice) {
+  @media(max-width: variables.$smallDevice){
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 24px;
   }
 
+
   .containerImage {
     width: 45%;
+    max-width: 500px;
 
-    @media (max-width: variables.$smallDevice) {
+    @media(max-width: variables.$smallDevice){
+      width: 60%;
+      max-width: 350px;
+    }
+
+    @media (max-width: variables.$mobileDevice) {
       width: 75%;
     }
+
     img {
       width: 100%;
     }
@@ -39,23 +47,39 @@ $variableAnimation: 60%;
     flex-direction: column;
     align-items: center;
     width: 45%;
+    max-width: 500px;
+    padding: 16px;
     gap: 16px;
 
-    @media (max-width: variables.$smallDevice) {
+    @media(max-width: variables.$smallDevice){
+      width: 100%;
+      gap: 8px;
+      text-align: justify;
+      max-width: 450px;
+    }
+
+    @media (max-width: variables.$mobileDevice) {
       width: 100%;
       gap: 0;
     }
 
     h1 {
       font-size: 2.3rem;
+      width: 100%;
 
-      @media (max-width: variables.$smallDevice) {
+      @media(max-width: variables.$smallDevice){
+        text-align: center;
+      }
+
+      @media (max-width: variables.$mobileDevice) {
         font-size: 1.9rem;
       }
     }
 
     .texte {
-      @media (max-width: variables.$smallDevice) {
+      text-align: justify;
+      
+      @media (max-width: variables.$mobileDevice) {
         display: none;
       }
     }
@@ -67,9 +91,13 @@ $variableAnimation: 60%;
       align-items: center;
       color: variables.$myOrange;
       gap: 8px;
-      padding-bottom: 32px;
-      @media (max-width: variables.$smallDevice) {
+      padding-top: 24px;
+      
+      @media (max-width: variables.$mobileDevice) {
+        padding-bottom: 24px;
+        padding-top: 0px;
         font-size: 0.9rem;
+        text-align: center;
       }
 
       .animation {
