--- a/src/pages/Body/Portfolio/ProjetsFavoris/components/vignetteProjet/vignetteProjet.scss
+++ b/src/pages/Body/Portfolio/ProjetsFavoris/components/vignetteProjet/vignetteProjet.scss
@@ -3,29 +3,41 @@
 .vignette {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  width: 90%;
+  
+  flex-wrap: wrap;
+  width: 48%;
+  max-width: 800px;
+  
+  @media(max-width: 1000px){
+    align-items: flex-start;
+    width: 90%;
+  }
 
   @media (max-width: variables.$mobileDevice) {
     flex-direction: column;
   }
 
-  div {
+  .presentation_projet {
+    width: 65%;
+    max-width: 350px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
     @media (max-width: variables.$mobileDevice) {
       width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
     }
   }
 
   h3 {
     text-align: start;
   }
+
   p {
     display: block;
+   
 
-    @media (max-width: variables.$smallDevice) {
+    @media (max-width: variables.$mobileDevice) {
       display: none;
     }
   }
@@ -33,9 +45,17 @@
   .listeTechno {
     display: flex;
     flex-wrap: wrap;
+    gap: 8px;
 
     img {
-      width: 50px;
+      width: 33px;
+      padding-top: 16px;
+      
+      @media(max-width: calc(variables.$smallDevice - 100px)){
+        width: 25px;
+        padding-top: 0;
+      }
+
     }
 
     @media (max-width: variables.$mobileDevice) {
@@ -43,7 +63,7 @@
     }
   }
 
-  .listeTechno_mobile_view {
+  .listeTechno_second_view {
     display: none;
     flex-direction: row;
     flex-wrap: wrap;
@@ -54,20 +74,26 @@
     div {
       width: 35px;
     }
+    
     @media (max-width: variables.$mobileDevice) {
       display: flex;
     }
   }
 
-  a {
-    border: solid 0.1px variables.$myLightGray;
-    width: 100%;
+  .image_lien_projet {
+    display: flex;
+    padding: 4px;
+    // // aspect-ratio: 1/1;
+    // overflow: hidden;
+    opacity: 0.7;
     border-radius: 15px;
     box-shadow: 10px 10px 10px variables.$myLightGray;
-    padding: 4px;
-    aspect-ratio: 1/1;
-    overflow: hidden;
-    opacity: 0.7;
+    border: solid 0.1px variables.$myLightGray;
+    width: 33%;
+
+    @media (max-width: variables.$mobileDevice) {
+      width: 100%;
+    }
 
     img {
       display: block;
