--- a/src/pages/Body/Portfolio/ProjetsFavoris/projetsFavoris.scss
+++ b/src/pages/Body/Portfolio/ProjetsFavoris/projetsFavoris.scss
@@ -1,19 +1,32 @@
 @use "../../../../variables";
 
 #liste_projetsFavoris {
-  background-color: variables.$myWhite;
-  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
-  gap: variables.$gap_vignette_mobile;
-  padding-bottom: 300px;
   padding-bottom: variables.$padding_bottom_Section;
+  background-color: variables.$myWhite;
+  gap: 64px;
+  max-width: variables.$maxWidth;
   
-  .plusDeProjets{
-    text-decoration: underline;
-    font-size: 1.5rem;
-    font-weight: bold;
+  h2{
+    
   }
+  
+  .container_vignetteProjet{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 24px;
+    
+    @media(max-width: 1000px){
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      gap: variables.$gap_vignette_mobile;
+    
+    }
+  }
+ 
 }
