--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -11,6 +11,7 @@ $myBlack: #231C07;
 $headerHeight: 80px;
 $mobileDevice: 479px;
 $smallDevice: 768px;
+$largeDevice: 1000px;
 $maxWidth: 1240px;
 
 $padding_bottom_Section: 64px; 
