--- a/src/pages/Body/Portfolio/MesTechnos/components/VignetteTechno/VignetteTechno.scss
+++ b/src/pages/Body/Portfolio/MesTechnos/components/VignetteTechno/VignetteTechno.scss
@@ -2,13 +2,23 @@
 
 .vignetteCategorieTechnos{
     background-color: variables.$myWhite;
-    width: 90%;
     display: flex;
     flex-direction: column;
     gap: 32px;
     align-items: center;
     border-radius: 16px;
     padding: 16px;
+    width: 32%;
+    
+    @media(max-width: variables.$smallDevice){
+        width: 49%;
+        
+    }
+
+    @media(max-width: variables.$mobileDevice){
+        width: 90%;
+
+    }
 
     .technos{
         display: flex;
@@ -27,7 +37,8 @@
 
             .logo_container{
               width: 100%;
-    
+              max-width: 75px;
+
                 img{
                     width: 100%;
                     aspect-ratio: 1/1;
