--- a/src/pages/Body/Login/login.scss
+++ b/src/pages/Body/Login/login.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
    height: calc(100vh - variables.$headerHeight);
     padding: 40px;
     
@@ -26,10 +26,6 @@
     }
 }
 
-
-.input{
- 
-}
 
 .btn{
     background-color: variables.$myWhite;
