--- a/src/pages/Body/Portfolio/ProjetsFavoris/projetsFavoris.scss
+++ b/src/pages/Body/Portfolio/ProjetsFavoris/projetsFavoris.scss
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 48px 0px;
     
     @media(max-width: 1000px){
       flex-direction: column;
