--- a/src/pages/Body/Portfolio/components/MyButton/MyButton.scss
+++ b/src/pages/Body/Portfolio/components/MyButton/MyButton.scss
@@ -14,5 +14,6 @@
         border-radius: 16px;
         box-shadow: 10px 10px 10px rgba(variables.$myBlack, 0.1);
         font-weight: bold;
+        width: 240px;
     }
 }
