--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @use "./variables";
+@import "./fonts.css";
 
 * {
   margin: 0;
@@ -6,12 +7,15 @@
 }
 
 body {
+  font-family: "Inter";
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: variables.$myWhite;
+  color: variables.$myBlack;
+  font-size: 1rem;
 
   input {
     padding-left: 8px;
@@ -30,19 +34,34 @@ body {
     background-color: #f5f5f5;
   }
 
+  h1 {
+    font-family: "Playpen Sans";
+    font-weight: bold;
+    color: variables.$myBlack;
+    font-size: 2.5rem;
+
+    @media (max-width: variables.$mobileDevice) {
+        font-size: 1.9rem;
+      }
+  }
+
   h2 {
     color: variables.$myOrange;
     font-size: variables.$h2_size_mobile;
-    
+    font-family: "Playpen Sans";
+    font-weight: bold;
+
     @media (max-width: variables.$smallDevice) {
     }
   }
 
   h3 {
+    font-family: "Playpen Sans";
     font-weight: bold;
     font-size: 1.3rem;
     width: 100%;
     text-align: center;
     color: variables.$myBlack;
+    font-size: 1.3rem;
   }
 }
