--- a/src/fonts.css
+++ b/src/fonts.css
@@ -5,21 +5,21 @@
 
 @font-face {
   font-family: "Playpen Sans";
-  src: url("./assets/fonts/Playpen\ Sans.woff2") format("woff2");
+  src: url("./assets/fonts/Playpen Sans.woff2") format("woff2");
 }
 
 @font-face {
     font-family: "Playpen Sans SemiBold";
-    src: url("./assets/fonts/Playpen\ Sans\ SemiBold.woff2")format("woff2"),
-  
+    src: url("./assets/fonts/Playpen Sans SemiBold.woff2") format("woff2");
 }
 
 @font-face {
+@font-face {
     font-family: "Patrick Hand";
-    src: url("./assets/fonts/patrickHand.woff2")format("woff2")
+    src: url("./assets/fonts/patrickHand.woff2") format("woff2");
 }
 
 @font-face {
     font-family: "Kalam";
-    src: url("./assets/fonts/kalam.woff2")format("woff2")
+    src: url("./assets/fonts/kalam.woff2") format("woff2");
 }
