Refactoring et adaptation du comportement du header

--- a/src/pages/Body/Edition/edition.scss
+++ b/src/pages/Body/Edition/edition.scss
@@ -1,6 +1,9 @@
 @use "../../../variables";
 
 #container_edition {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
 }
 
