--- a/src/pages/Body/Remerciement/remerciement.scss
+++ b/src/pages/Body/Remerciement/remerciement.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: calc(100vh - variables.$footerHeight);
+    height: calc(100vh - variables.$footerHeight - variables.$headerHeight);
     background-color: variables.$myWhite;
     
     img{
