--- a/src/pages/Header/header.scss
+++ b/src/pages/Header/header.scss
@@ -19,8 +19,7 @@ header {
   padding: 0px 40px;
   margin: 0 auto;
 
-  @media (max-width: variables.$maxWidth){
-
+  @media (max-width: variables.$maxWidth) {
   }
 
   @media (max-width: variables.$smallDevice) {
@@ -35,15 +34,14 @@ header {
     font-family: "Playpen Sans";
     font-size: 2.5rem;
 
-    @media(max-width: variables.$smallDevice){
+    @media (max-width: variables.$smallDevice) {
       font-size: 2rem;
     }
 
-    @media(max-width: variables.$mobileDevice){
+    @media (max-width: variables.$mobileDevice) {
       font-size: 1.8rem;
       padding-left: 8px;
     }
-   
   }
 
   #burger-menu {
@@ -57,7 +55,7 @@ header {
       display: flex;
     }
 
-    .burger-icon {
+    .burger-icone {
       height: 29px;
       width: 45px;
       display: flex;
@@ -69,6 +67,57 @@ header {
         width: 100%;
         border-radius: 2px;
         background-color: variables.$myWhite;
+      }
+
+      .burger-line:nth-child(1) {
+        transform-origin: center;
+        animation: firstLineAnimationClose $animationMenuTimer ease-in-out forwards;
+
+        @keyframes firstLineAnimationClose {
+          0% {
+            transform: translateY(12px) rotate(0deg) scale(0);
+          }
+          50% {
+            transform: translateY(12px) rotate(0deg) scale(1);
+          }
+          100% {
+            transform: translateY(0px) rotate(0deg) scale(1);
+          }
+        }
+      }
+
+      .burger-line:nth-child(2) {
+        transform-origin: center;
+        animation: secondLineAnimationClose $animationMenuTimer ease-in-out forwards;
+
+        @keyframes secondLineAnimationClose {
+          0% {
+            transform: translateY(0px) rotate(0deg) scale(0);
+          }
+          50% {
+            transform: translateY(0px) rotate(0deg) scale(1);
+          }
+          100% {
+            transform: translateY(0px) rotate(0deg) scale(1);
+          }
+        }
+      }
+
+      .burger-line:nth-child(3) {
+        transform-origin: center;
+        animation: thirdLineAnimationClose $animationMenuTimer ease-in-out forwards;
+
+        @keyframes thirdLineAnimationClose {
+          0% {
+            transform: translateY(-12px) rotate(0deg) scale(0);
+          }
+          50% {
+            transform: translateY(-12px) rotate(0deg) scale(1);
+          }
+          100% {
+            transform: translateY(0px) rotate(0deg) scale(1);
+          }
+        }
       }
 
       &.open .burger-line:nth-child(1) {
@@ -131,57 +180,6 @@ header {
           }
         }
       }
-
-      &.close .burger-line:nth-child(1) {
-        transform-origin: center;
-        animation: firstLineAnimationClose $animationMenuTimer ease-in-out forwards;
-
-        @keyframes firstLineAnimationClose {
-          0% {
-            transform: translateY(12px) rotate(0deg) scale(0);
-          }
-          50% {
-            transform: translateY(12px) rotate(0deg) scale(1);
-          }
-          100% {
-            transform: translateY(0px) rotate(0deg) scale(1);
-          }
-        }
-      }
-
-      &.close .burger-line:nth-child(2) {
-        transform-origin: center;
-        animation: secondLineAnimationClose $animationMenuTimer ease-in-out forwards;
-
-        @keyframes secondLineAnimationClose {
-          0% {
-            transform: translateY(0px) rotate(0deg) scale(0);
-          }
-          50% {
-            transform: translateY(0px) rotate(0deg) scale(1);
-          }
-          100% {
-            transform: translateY(0px) rotate(0deg) scale(1);
-          }
-        }
-      }
-
-      &.close .burger-line:nth-child(3) {
-        transform-origin: center;
-        animation: thirdLineAnimationClose $animationMenuTimer ease-in-out forwards;
-
-        @keyframes thirdLineAnimationClose {
-          0% {
-            transform: translateY(-12px) rotate(0deg) scale(0);
-          }
-          50% {
-            transform: translateY(-12px) rotate(0deg) scale(1);
-          }
-          100% {
-            transform: translateY(0px) rotate(0deg) scale(1);
-          }
-        }
-      }
     }
   }
 
@@ -206,10 +204,10 @@ header {
       width: 100%;
       gap: 24px;
 
-      @media(max-width: variables.$smallDevice){
+      @media (max-width: variables.$smallDevice) {
         gap: 16px;
       }
-      
+
       @media (max-width: variables.$mobileDevice) {
         gap: 32px;
         flex-direction: column;
@@ -219,8 +217,7 @@ header {
         .icone {
           color: variables.$myWhite;
 
-          @media(max-width: variables.$smallDevice){
-
+          @media (max-width: variables.$smallDevice) {
           }
 
           @media (max-width: variables.$mobileDevice) {
@@ -251,8 +248,6 @@ header {
           padding-left: 16px;
         }
       }
-
-      
     }
   }
 }
