--- a/src/pages/Body/ErrorPage/errorPage.scss
+++ b/src/pages/Body/ErrorPage/errorPage.scss
@@ -16,5 +16,10 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        .btn{
+            width: 30%;
+            margin-top: 16px;
+        }
     }
 }
